# Sentiment-Analysis-on-Cryptocurrencies

./: .gitignore  Makefile  README.md  pyproject.toml  report.tex  requirements.txt
src/: main.py
src/analysis/: time_series.py
src/coins/: bitcoin.py  coin.py  ethereum.py
src/datasources/: coinDatasource.py  datasource.py
src/datasources/posts/: postsDatasource.py
src/datasources/posts/tweets/: tweetsCSVDatasource.py  tweetsDatasource.py  tweetsWebDatasource.py
src/models/: model.py
src/models/transformers/: BertModel.py  RobertaModel.py  transformers.py
src/tokenizers/: BertTokenizer.py  RobertaTokenizer.py  __init__.py  tokenizer.py
src/utils/: csvReader.py  logger.py  settings.py  utils.py
src/visualizations/: boxplot.py  correlation.py  model_comparison.py  sentiment_price.py  visualization.py
